Fix scrollbar in Chrome.

--- a/src/components/FooterBar/UserInfo.css
+++ b/src/components/FooterBar/UserInfo.css
@@ -13,8 +13,8 @@
 }
 
 .UserInfo-avatar {
-  width: 50px;
-  height: 50px;
+  width: 48px;
+  height: 48px;
   margin: auto;
   display: block;
 }
